@@ -1,17 +1,29 @@
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
+import org.jetbrains.kotlin.build.androidsdkprovisioner.ProvisioningType
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.jetbrains.kotlin.gradle.plugin.KotlinCompilation
 import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile
 import java.nio.file.Paths
+import java.time.Duration
 
 plugins {
     kotlin("jvm")
     kotlin("plugin.serialization")
+    id("android-sdk-provisioner")
+    id("gradle-plugin-compiler-dependency-configuration")
 }
 
 testsJar()
 
-kotlin.sourceSets.all {
-    languageSettings.optIn("org.jetbrains.kotlin.gradle.InternalKotlinGradlePluginApi")
-    languageSettings.optIn("org.jetbrains.kotlin.gradle.ComposeKotlinGradlePluginApi")
+kotlin {
+    jvmToolchain(17)
+    compilerOptions {
+        optIn.addAll(
+            "org.jetbrains.kotlin.gradle.InternalKotlinGradlePluginApi",
+            "org.jetbrains.kotlin.gradle.ComposeKotlinGradlePluginApi",
+            "kotlin.io.path.ExperimentalPathApi",
+        )
+    }
 }
 
 val kotlinGradlePluginTest = project(":kotlin-gradle-plugin").sourceSets.named("test").map { it.output }
@@ -75,7 +87,8 @@ dependencies {
     testImplementation(project(":native:kotlin-klib-commonizer-api"))
 
     testImplementation(project(":kotlin-compiler-embeddable"))
-    testImplementation(commonDependency("org.jetbrains.intellij.deps:jdom"))
+    testImplementation(intellijJDom())
+    testImplementation(intellijPlatformUtil())
     testImplementation(project(":compiler:cli-common"))
     testImplementation(project(":compiler:build-tools:kotlin-build-statistics"))
     // testCompileOnly dependency on non-shaded artifacts is needed for IDE support
@@ -83,15 +96,18 @@ dependencies {
     testCompileOnly(project(":kotlin-gradle-plugin-test-utils-embeddable"))
     testRuntimeOnly(project(":kotlin-gradle-plugin-test-utils-embeddable")) { isTransitive = false }
 
+    // AGP classes for buildScriptInjection's
+    testImplementation(libs.android.gradle.plugin.gradle.api) { isTransitive = false }
+
     testImplementation(project(path = ":examples:annotation-processor-example"))
     testImplementation(kotlinStdlib("jdk8"))
     testImplementation(project(":kotlin-parcelize-compiler"))
     testImplementation(commonDependency("org.jetbrains.intellij.deps", "trove4j"))
-    testImplementation(commonDependency("org.jetbrains.kotlinx", "kotlinx-serialization-json"))
+    testImplementation(libs.kotlinx.serialization.json)
     testImplementation(libs.ktor.client.cio)
     testImplementation(libs.ktor.client.mock)
     testImplementation(libs.ktor.server.core)
-    testImplementation(libs.ktor.server.netty)
+    testImplementation(libs.ktor.server.cio)
     testImplementation(libs.ktor.server.test.host)
 
     testImplementation(gradleApi())
@@ -102,10 +118,11 @@ dependencies {
     testRuntimeOnly(libs.junit.jupiter.engine)
     testRuntimeOnly(libs.junit.vintage.engine)
     testImplementation(libs.junit.jupiter.params)
+    testImplementation(libs.oshi.core)
 
-    testRuntimeOnly(project(":compiler:tests-mutes"))
+    testApi(project(":compiler:tests-mutes:mutes-junit5"))
 
-    testCompileOnly(commonDependency("org.jetbrains.intellij.deps:asm-all"))
+    testCompileOnly(libs.intellij.asm)
 }
 
 val konanDataDir: String = System.getProperty("konanDataDirForIntegrationTests")
@@ -113,39 +130,31 @@ val konanDataDir: String = System.getProperty("konanDataDirForIntegrationTests")
         .resolve(".kotlin")
         .resolve("konan-for-gradle-tests").absolutePath
 
-// Aapt2 from Android Gradle Plugin 3.2 and below does not handle long paths on Windows.
-val shortenTempRootName = project.providers.systemProperty("os.name").get().contains("Windows")
-
-val splitGradleIntegrationTestTasks =
-    project.providers.gradleProperty("gradle.integration.tests.split.tasks").orNull?.toBoolean()
-        ?: project.kotlinBuildProperties.isTeamcityBuild
-
-tasks.withType<KotlinJvmCompile>().configureEach {
-    compilerOptions.optIn.add("kotlin.io.path.ExperimentalPathApi")
-}
-
-val cleanTestKitCacheTask = tasks.register<Delete>("cleanTestKitCache") {
+tasks.register<Delete>("cleanTestKitCache") {
     group = "Build"
     description = "Deletes temporary Gradle TestKit cache"
 
     delete(layout.buildDirectory.dir("testKitCache"))
+    delete(layout.buildDirectory.dir("kgpTestInfra"))
 }
 
-tasks.register<Delete>("cleanUserHomeKonanDir") {
-    description =
-        "Deletes ~/.konan dir before tests. This step is necessary to ensure that no test inadvertently creates this directory during execution."
+val cleanUserHomeKonanDir by tasks.registering(Delete::class) {
+    description = "Only runs on CI. " +
+            "Deletes ~/.konan dir before tests, to ensure that no test inadvertently creates this directory during execution."
+
+    val isTeamCityBuild = project.kotlinBuildProperties.isTeamcityBuild
+    onlyIf("Build is running on TeamCity") { isTeamCityBuild }
 
     val userHomeKonanDir = Paths.get("${System.getProperty("user.home")}/.konan")
-
     delete(userHomeKonanDir)
 
     doLast {
         logger.info("Default .konan directory user's home has been deleted: $userHomeKonanDir")
     }
 }
-tasks.register<Task>("prepareNativeBundleForGradleIT") {
 
-    description = "This task adds dependency on :kotlin-native:bundle"
+val prepareNativeBundleForGradleIT by tasks.registering {
+    description = "This task adds dependency on :kotlin-native:install"
 
     if (project.kotlinBuildProperties.isKotlinNativeEnabled) {
         // Build full Kotlin Native bundle
@@ -153,17 +162,13 @@ tasks.register<Task>("prepareNativeBundleForGradleIT") {
     }
 }
 
-tasks.register<Task>("createProvisionedOkFiles") {
+val createProvisionedOkFiles by tasks.registering {
 
     description = "This task creates `provisioned.ok` file for each preconfigured k/n native bundle." +
             "Kotlin/Native bundle can be prepared in two ways:" +
             "`prepareNativeBundleForGradleIT` task for local environment and `Compiler Dist: full bundle` build for CI environment."
 
-    val prepareNativeBundleTaskName = ":kotlin-gradle-plugin-integration-tests:prepareNativeBundleForGradleIT"
-    val taskExists = project.tasks.findByPath(prepareNativeBundleTaskName) != null
-    if (taskExists) {
-        mustRunAfter(prepareNativeBundleTaskName)
-    }
+    mustRunAfter(prepareNativeBundleForGradleIT)
 
     val konanDistributions = File(konanDataDir)
 
@@ -177,15 +182,6 @@ tasks.register<Task>("createProvisionedOkFiles") {
                 File(it, "provisioned.ok").createNewFile()
             }
     }
-
-}
-
-fun Test.includeMppAndAndroid(include: Boolean) = includeTestsWithPattern(include) {
-    addAll(listOf("*Multiplatform*", "*Mpp*", "*Android*"))
-}
-
-fun Test.includeNative(include: Boolean) = includeTestsWithPattern(include) {
-    addAll(listOf("org.jetbrains.kotlin.gradle.native.*", "*Commonizer*"))
 }
 
 fun Test.applyKotlinNativeFromCurrentBranchIfNeeded() {
@@ -194,7 +190,7 @@ fun Test.applyKotlinNativeFromCurrentBranchIfNeeded() {
 
     //add native bundle dependencies for local test run
     if (kotlinNativeFromMasterEnabled && !project.kotlinBuildProperties.isTeamcityBuild) {
-        dependsOn(":kotlin-gradle-plugin-integration-tests:prepareNativeBundleForGradleIT")
+        dependsOn(prepareNativeBundleForGradleIT)
     }
 
     // Providing necessary properties for running tests with k/n built from master on the local environment
@@ -211,79 +207,24 @@ fun Test.applyKotlinNativeFromCurrentBranchIfNeeded() {
         }
         systemProperty("konanDataDirForIntegrationTests", konanDataDir)
     }
-    dependsOn(":kotlin-gradle-plugin-integration-tests:createProvisionedOkFiles")
-}
-
-fun Test.includeTestsWithPattern(include: Boolean, patterns: (MutableSet<String>).() -> Unit) {
-    if (splitGradleIntegrationTestTasks) {
-        val filter = if (include)
-            filter.includePatterns
-        else
-            filter.excludePatterns
-        filter.patterns()
-    }
-}
-
-fun Test.advanceGradleVersion() {
-    val gradleVersionForTests = "8.7"
-    systemProperty("kotlin.gradle.version.for.tests", gradleVersionForTests)
-}
-
-// additional configuration in tasks.withType<Test> below
-projectTest(
-    "test",
-    shortenTempRootName = shortenTempRootName,
-    jUnitMode = JUnitMode.JUnit5
-) {
-    includeMppAndAndroid(false)
-    includeNative(false)
-}
-
-projectTest(
-    "testAdvanceGradleVersion",
-    shortenTempRootName = shortenTempRootName,
-    jUnitMode = JUnitMode.JUnit5
-) {
-    advanceGradleVersion()
-    includeMppAndAndroid(false)
-    includeNative(false)
-}
-
-if (splitGradleIntegrationTestTasks) {
-
-    projectTest(
-        "testMppAndAndroid",
-        shortenTempRootName = shortenTempRootName,
-        jUnitMode = JUnitMode.JUnit5
-    ) {
-        includeMppAndAndroid(true)
-    }
-
-    projectTest(
-        "testAdvanceGradleVersionMppAndAndroid",
-        shortenTempRootName = shortenTempRootName,
-        jUnitMode = JUnitMode.JUnit5
-    ) {
-        advanceGradleVersion()
-        includeMppAndAndroid(true)
-    }
+    dependsOn(createProvisionedOkFiles)
 }
 
 val KGP_TEST_TASKS_GROUP = "Kotlin Gradle Plugin Verification"
+
+// Disabling test task as it does nothing
+tasks.test {
+    enabled = false
+    group = null
+    description = "Disabled - use KGP specific tasks in the '$KGP_TEST_TASKS_GROUP' group instead."
+}
+
 val memoryPerGradleTestWorkerMb = 6000
 val maxParallelTestForks =
     (totalMaxMemoryForTestsMb / memoryPerGradleTestWorkerMb).coerceIn(1, Runtime.getRuntime().availableProcessors())
 
 // Must be in sync with TestVersions.kt KTI-1612
 val gradleVersions = listOf(
-    "6.8.3",
-    "6.9.4",
-    "7.0.2",
-    "7.1.1",
-    "7.2",
-    "7.3.3",
-    "7.4.2",
-    "7.5.1",
     "7.6.3",
     "8.0.2",
     "8.1.1",
@@ -292,7 +233,11 @@ val gradleVersions = listOf(
     "8.4",
     "8.5",
     "8.6",
-    "8.7"
+    "8.7",
+    "8.8",
+    "8.9",
+    "8.10.2",
+    "8.11.1",
 )
 
 if (project.kotlinBuildProperties.isTeamcityBuild) {
@@ -317,7 +262,6 @@ if (project.kotlinBuildProperties.isTeamcityBuild) {
                 useJUnitPlatform {
                     includeTags(junitTag)
                     excludeTags(*(junitTags - junitTag).toTypedArray())
-                    includeEngines("junit-jupiter")
                 }
             }
         }
@@ -329,7 +273,7 @@ if (project.kotlinBuildProperties.isTeamcityBuild) {
     }
 }
 
-val allParallelTestsTask = tasks.register<Test>("kgpAllParallelTests") {
+tasks.register<Test>("kgpAllParallelTests") {
     group = KGP_TEST_TASKS_GROUP
     description = "Runs all tests for Kotlin Gradle plugins except daemon ones"
 
@@ -337,7 +281,6 @@ val allParallelTestsTask = tasks.register<Test>("kgpAllParallelTests") {
 
     useJUnitPlatform {
         excludeTags("DaemonsKGP")
-        includeEngines("junit-jupiter")
     }
 }
 
@@ -348,7 +291,6 @@ val jvmTestsTask = tasks.register<Test>("kgpJvmTests") {
     useJUnitPlatform {
         includeTags("JvmKGP")
         excludeTags("JsKGP", "NativeKGP", "DaemonsKGP", "OtherKGP", "MppKGP", "AndroidKGP", "SwiftExportKGP")
-        includeEngines("junit-jupiter")
     }
 }
 
@@ -359,8 +301,8 @@ val swiftExportTestsTask = tasks.register<Test>("kgpSwiftExportTests") {
     useJUnitPlatform {
         includeTags("SwiftExportKGP")
         excludeTags("JvmKGP", "JsKGP", "DaemonsKGP", "OtherKGP", "MppKGP", "AndroidKGP", "NativeKGP")
-        includeEngines("junit-jupiter")
     }
+    applyKotlinNativeFromCurrentBranchIfNeeded()
 }
 
 val jsTestsTask = tasks.register<Test>("kgpJsTests") {
@@ -370,7 +312,6 @@ val jsTestsTask = tasks.register<Test>("kgpJsTests") {
     useJUnitPlatform {
         includeTags("JsKGP")
         excludeTags("JvmKGP", "NativeKGP", "DaemonsKGP", "OtherKGP", "MppKGP", "AndroidKGP", "SwiftExportKGP")
-        includeEngines("junit-jupiter")
     }
 }
 
@@ -381,7 +322,6 @@ val nativeTestsTask = tasks.register<Test>("kgpNativeTests") {
     useJUnitPlatform {
         includeTags("NativeKGP")
         excludeTags("JvmKGP", "JsKGP", "DaemonsKGP", "OtherKGP", "MppKGP", "AndroidKGP", "SwiftExportKGP")
-        includeEngines("junit-jupiter")
     }
     applyKotlinNativeFromCurrentBranchIfNeeded()
 }
@@ -395,7 +335,6 @@ val daemonsTestsTask = tasks.register<Test>("kgpDaemonTests") {
     useJUnitPlatform {
         includeTags("DaemonsKGP")
         excludeTags("JvmKGP", "JsKGP", "NativeKGP", "OtherKGP", "MppKGP", "AndroidKGP", "SwiftExportKGP")
-        includeEngines("junit-jupiter")
     }
 }
 
@@ -406,7 +345,6 @@ val otherPluginsTestTask = tasks.register<Test>("kgpOtherTests") {
     useJUnitPlatform {
         includeTags("OtherKGP")
         excludeTags("JvmKGP", "JsKGP", "NativeKGP", "DaemonsKGP", "MppKGP", "AndroidKGP", "SwiftExportKGP")
-        includeEngines("junit-jupiter")
     }
     applyKotlinNativeFromCurrentBranchIfNeeded()
 }
@@ -418,7 +356,6 @@ val mppTestsTask = tasks.register<Test>("kgpMppTests") {
     useJUnitPlatform {
         includeTags("MppKGP")
         excludeTags("JvmKGP", "JsKGP", "NativeKGP", "DaemonsKGP", "OtherKGP", "AndroidKGP", "SwiftExportKGP")
-        includeEngines("junit-jupiter")
     }
     applyKotlinNativeFromCurrentBranchIfNeeded()
 }
@@ -430,20 +367,43 @@ val androidTestsTask = tasks.register<Test>("kgpAndroidTests") {
     useJUnitPlatform {
         includeTags("AndroidKGP")
         excludeTags("JvmKGP", "JsKGP", "NativeKGP", "DaemonsKGP", "OtherKGP", "MppKGP", "SwiftExportKGP")
-        includeEngines("junit-jupiter")
     }
 }
 
 tasks.named<Task>("check") {
-    dependsOn("testAdvanceGradleVersion")
-    dependsOn(jvmTestsTask, jsTestsTask, nativeTestsTask, daemonsTestsTask, otherPluginsTestTask, mppTestsTask, androidTestsTask)
-    if (splitGradleIntegrationTestTasks) {
-        dependsOn("testAdvanceGradleVersionMppAndAndroid")
-        dependsOn("testMppAndAndroid")
+    dependsOn(
+        jvmTestsTask,
+        jsTestsTask,
+        nativeTestsTask,
+        daemonsTestsTask,
+        otherPluginsTestTask,
+        mppTestsTask,
+        androidTestsTask,
+        swiftExportTestsTask,
+    )
+}
+
+/**
+ * The JVM toolchain is configured to version 17.
+ * However, that breaks buildscript injection for tests that are ran on JDK 8.
+ * Such setup allows to use new Java API in the test infrastructure.
+ */
+fun configureJvmTarget8() {
+    tasks.compileTestJava {
+        sourceCompatibility = "8"
+        targetCompatibility = "8"
+    }
+
+    tasks.compileTestKotlin {
+        compilerOptions {
+            jvmTarget = JvmTarget.JVM_1_8
+        }
     }
 }
 
-tasks.withType<Test> {
+configureJvmTarget8()
+
+tasks.withType<Test>().configureEach {
     // Disable KONAN_DATA_DIR env variable for all integration tests
     // because we are using `konan.data.dir` gradle property instead
     environment.remove("KONAN_DATA_DIR")
@@ -451,31 +411,66 @@ tasks.withType<Test> {
     val noTestProperty = project.providers.gradleProperty("noTest")
     onlyIf { !noTestProperty.isPresent }
 
+    // Trigger task timeout earlier than TC timeout, so we could collect more info what went wrong with IT tests
+    // The longest one are on MacOS/X64 agents in release configurations
+    timeout.set(Duration.ofHours(7))
+
+    /**
+     * Gradle needs these opens to serialize CC and adds them implicitly:
+     * - https://github.com/gradle/gradle/blob/2c7035c5fc5c18c044d2de45764f88ada143e4a7/platforms/core-runtime/base-services/src/main/java/org/gradle/internal/jvm/JpmsConfiguration.java#L41
+     * - https://github.com/gradle/gradle/blob/2c7035c5fc5c18c044d2de45764f88ada143e4a7/platforms/core-runtime/client-services/src/main/java/org/gradle/launcher/daemon/client/DefaultDaemonStarter.java#L142
+     *
+     * Since runs withDebug will happen in-process, add these to make sure IT that run with CC are debuggable
+     */
+    jvmArgs(
+        "--add-opens", "java.base/java.util=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+        "--add-opens", "java.base/java.net=ALL-UNNAMED",
+    )
+
     dependsOn(":kotlin-gradle-plugin:validatePlugins")
     dependsOnKotlinGradlePluginInstall()
     dependsOn(":gradle:android-test-fixes:install")
     dependsOn(":gradle:gradle-warnings-detector:install")
     dependsOn(":gradle:kotlin-compiler-args-properties:install")
-    dependsOn(":libraries:tools:gradle:fus-statistics-gradle-plugin:install")
     dependsOn(":examples:annotation-processor-example:install")
     dependsOn(":kotlin-dom-api-compat:install")
-    if (project.kotlinBuildProperties.isTeamcityBuild) {
-        dependsOn(":kotlin-gradle-plugin-integration-tests:cleanUserHomeKonanDir")
-    }
+    dependsOn(cleanUserHomeKonanDir)
 
     systemProperty("kotlinVersion", rootProject.extra["kotlinVersion"] as String)
     systemProperty("runnerGradleVersion", gradle.gradleVersion)
+    systemProperty("composeSnapshotVersion", composeRuntimeSnapshot.versions.snapshot.version.get())
+    systemProperty("composeSnapshotId", composeRuntimeSnapshot.versions.snapshot.id.get())
+
+    // Add debugTargetProcessWhenDebuggingKGP-IT=true to local.properties to run IT withDebug when debugging the tests in IDE
+    if (kotlinBuildProperties.getBoolean("debugTargetProcessWhenDebuggingKGP-IT", false)) {
+        systemProperty("debugTargetProcessWhenDebuggingKGP-IT", true)
+    }
 
     val installCocoapods = project.findProperty("installCocoapods") as String?
     if (installCocoapods != null) {
         systemProperty("installCocoapods", installCocoapods)
     }
 
+    // Gradle 8.10 requires running on at least JDK 17
+    javaLauncher.value(project.getToolchainLauncherFor(JdkMajorVersion.JDK_17_0)).disallowChanges()
+
     val jdk8Provider = project.getToolchainJdkHomeFor(JdkMajorVersion.JDK_1_8)
     val jdk11Provider = project.getToolchainJdkHomeFor(JdkMajorVersion.JDK_11_0)
     val jdk17Provider = project.getToolchainJdkHomeFor(JdkMajorVersion.JDK_17_0)
     val jdk21Provider = project.getToolchainJdkHomeFor(JdkMajorVersion.JDK_21_0)
     val mavenLocalRepo = project.providers.systemProperty("maven.repo.local").orNull
+
+    val compileTestDestination = kotlin.target
+        .compilations[KotlinCompilation.TEST_COMPILATION_NAME]
+        .compileTaskProvider
+        .flatMap { task ->
+            (task as KotlinJvmCompile).destinationDirectory
+        }
+    doFirst {
+        systemProperty("buildGradleKtsInjectionsClasspath", compileTestDestination.get().asFile.absolutePath)
+    }
 
     // Query required JDKs paths only on execution phase to avoid triggering auto-download on project configuration phase
     // names should follow "jdk\\d+Home" regex where number is a major JDK version
@@ -489,24 +484,12 @@ tasks.withType<Test> {
         }
     }
 
-    useAndroidSdk()
+    androidSdkProvisioner {
+        provideToThisTaskAsSystemProperty(ProvisioningType.SDK)
+    }
 
-    val shouldApplyJunitPlatform = name !in setOf(
-        allParallelTestsTask.name,
-        jvmTestsTask.name,
-        jsTestsTask.name,
-        swiftExportTestsTask.name,
-        nativeTestsTask.name,
-        daemonsTestsTask.name,
-        otherPluginsTestTask.name,
-        mppTestsTask.name,
-        androidTestsTask.name
-    )
-    if (shouldApplyJunitPlatform) {
-        maxHeapSize = "512m"
-        useJUnitPlatform {
-            includeEngines("junit-vintage")
-        }
+    useJUnitPlatform {
+        includeEngines("junit-jupiter")
     }
 
     testLogging {
